Merged in feature/LH-29-note-worker-version-on-taskrun (pull request #10)
Feature/LH-29 note worker version on taskrun

* Merge branch 'master' into feature/LH-29-note-worker-version-on-taskrun

* LH-29: add bracket extension

* LH-29: typo

* LH-29: typo

* LH-29: add task worker version ro task claim event

* LH-29: [@colt] update the DAO impl and node run status and task worker version

* LH-29: [@colt] move task workewr version to TaskRun class

* LH-29: add a short task

* LH-29: fix gradle config in the test block

* LH-29: revert change markTaskAsRunning to markTaskAsScheduled


Approved-by: Colt McNealy